# learn_about_media

./: .gitignore  README.md
docker/: Dockerfile  docker-compose.yml  restart.sh
learn_about_media/: CMakeLists.txt  build.sh
learn_about_media/examples/demux_decode/: main.cxx
learn_about_media/include/: api.hxx  codec.hxx  common.hxx  factory.hxx  format.hxx  frame.hxx  packet.hxx
learn_about_media/source/usingff/: codecff.cxx  codecparamff.hxx  formatff.cxx  frameff.hxx  packetff.hxx  utils.cxx  utils.hxx
learn_about_media/uml/: basic_structure.puml
scripts/: ffmpeg_build.sh
